# Dynamic-RAG

./: .gitignore  README.md  README_MODULAR.md  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  vector_store.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  agent_service.py  cleanup_temp.py  frame_extraction.py  pdf_service.py  search_service.py
app/tools/: __init__.py  browse_tool.py  retrieval_tool.py  video_retrieval_tool.py  web_search_tool.py
